2019-1/220/users/4389/executions/1736_2496.log
== TEST (2019-05-15 18:47:44) 
-- CODE:
numero = int(input("Informe um numero qualquer: \n"))
soma = 0
while(numero != -1 ):
	soma  = soma + num 
	print(soma)
	numero = int(input("Informe um numero qualquer: \n"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma  = soma + num 
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:47:55) 
-- CODE:
numero = int(input("Informe um numero qualquer: \n"))
soma = 0
while(numero != -1 ):
	soma  = soma + numero
	print(soma)
	numero = int(input("Informe um numero qualquer: \n"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:48:17) 
-- CODE:
numero = int(input("Informe um numero qualquer: \n"))
soma = 0
while(numero != -1 ):
	soma  = soma + numero
	print(soma)
	numero = int(input("Informe um numero qualquer: \n"))
-- EXECUTION TIME:
0.200208
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:49:52) 
-- CODE:
numero = int(input("Informe um numero qualquer: \n"))
soma = 0
while(numero != -1 ):
	soma  = soma + numero
	print(soma)
	numero = int(input("Informe um numero qualquer: \n"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:52) 
-- CODE:
numero = int(input("Informe um numero qualquer: \n"))
soma = 0
while(numero != -1 ):
	soma  = soma + numero	
	numero = int(input("Informe um numero qualquer: \n"))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:51:09) 
-- CODE:
numero = int(input("Informe um numero qualquer: \n"))
soma = 0
while(numero != -1 ):
	soma  = soma + numero	
	numero = int(input("Informe um numero qualquer: \n"))
print(soma)
-- EXECUTION TIME:
0.137082
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 02:03:46) 
-- CODE:
numero = int(input("Informe um numero qualquer: \n"))
soma = 0
while(numero != -1 ):
	soma  = soma + numero	
	numero = int(input("Informe um numero qualquer: \n"))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
